# Riemannian_MeanFlow

./: README.md  classifier.py  environment.yaml
configs/: eval.yaml
configs/callbacks/: timer.yaml
configs/data/: earth.yaml  so3_synth.yaml
configs/experiment/lagrange/: lagrange_amino_general.yaml  lagrange_amino_glycine.yaml  lagrange_amino_proline.yaml  lagrange_earth_earthquake.yaml  lagrange_earth_fire.yaml  lagrange_earth_flood.yaml  lagrange_earth_volcano.yaml
configs/experiment/meanflow/: meanflow_amino_general.yaml  meanflow_amino_glycine.yaml  mf_torus.yaml  (+10 more)
configs/model/: lag_so3.yaml  meanflow_so3.yaml
grasp/: pyproject.toml
grasp/scripts/: __init__.py  ali.py  ali_1000_files.py  analysis.ipynb  analyze_training_data.py  ferdy.py  ferdy_evaluation.py  generate_analysis.py  generate_grasp.py  sanity_mlp.py  show_generated_grasp.py  show_glb.py  show_grasp.py  test.py  train_mlp.py  train_mlp_1000.py  validate_grasp.py  visualize_collision_graspable.py  visualize_collision_graspable_generated.py  wasserstein_evaluation.py
grasp/src/adlr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grasp/src/core/: config.py  train.py  visualize.py
grasp/src/data/: data_manager.py  dataset.py  util.py
grasp/src/models/: flow.py  lightning.py  pcgrad.py  sdf_encoder.py  util.py  velocity_mlp.py  wasserstein.py
rmf/: classifier.py  eval.py
rmf/data/: amino_datamodule.py  earth_datamodule.py
rmf/models/: __init__.py  flowmap_module.py  generative_module.py  meanflow_module.py  rfm_module.py
rmf/rmf/: train.py
rmf/utils/: __init__.py
(+49 files in other folders)
